--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_cookapp_1_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_cookapp_1_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CookApp">
+        android:theme="@style/Theme.MaterialComponents.DayNight">
         <activity
             android:name=".activities.SettingsActivity"
             android:exported="false" />
 
         <activity
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
             android:name=".activities.InitActivity"
             android:exported="true">
             <intent-filter>
